src/TweetDisplay/index.module.css
.container {
  flex-basis: 100%;
  max-width: 450px;
  height: 14rem;
}

.tweet {
  text-align: left;
  text-decoration: none;
  color: black;
  overflow: hidden;

  height: 100%;
  display: block;
  padding: 1.2rem;
}

.tweet:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.header {
  margin: -0.5rem;
  padding: 0.5rem;
  border-radius: 5px;
}

.text {
  padding-top: 1.2rem;
  font-size: 1.2rem;
  word-wrap: break-word;
}

.name {
  font-weight: 600;
  font-size: 1.2rem;
}

.secondary {
  color: rgb(66, 66, 66);
  font-size: 1.1rem;
}

.emptyMessage {
  font-size: 1.3rem;
  padding-top: 6rem;
  text-align: center;
}

